--- a/ArlojieFE/package.json
+++ b/ArlojieFE/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
